# actixweb-rust

./: .gitignore  Cargo.toml  README.md  sample-env
src/: constants.rs  error.rs  main.rs  schema.rs
src/api/: user_api.rs
src/middlewares/: auth_middleware.rs
src/models/: mod.rs
src/models/http/: response.rs
src/models/user/: user_model.rs
src/repositories/user/: user_repo.rs
src/routers/: app.rs  mod.rs  user_routers.rs
src/services/jwt/: jwt_service.rs
src/services/user/: user_services.rs
src/utilities/: jwt_token_util.rs  mod.rs  redis_util.rs
