[package]
name = "actix-rust02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"

serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.106"
serde_with = "3.3.0"

diesel = { version = "2.1.1", features = ["postgres"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
env_logger = "0.10.0"

jsonwebtoken = "8.3.0"
log = "0.4.20"
futures = "0.3.28"

dotenv = "0.15.0"
deadpool = "0.9.5"
deadpool-postgres = "0.10.5"

redis = { version = "0.23.3", default-features = false, features = ["tokio-comp", "connection-manager"] }
bigdecimal = { version ="0.4.1", features = ["serde"]}
tokio_schedule = "0.3.1"
reqwest = { version = "0.11.22", features = ["json"] }
async-channel = "2.1.0"
rand = "0.8.5"

chrono = { version = "0.4.30", features = ["serde"] }
chrono-tz = "0.8.3"
uuid = {version = "1.4.1", features = ["v4","serde"]}

bcrypt = "0.15"